Latest updates which inc. better headers for author pages, styled 404, spacing fixes for pages with no pagination and a small tidy up.

--- a/scss/pages/_single.scss
+++ b/scss/pages/_single.scss
@@ -168,6 +168,7 @@
 
                 > div {
                     position: relative;
+                    max-width: 40vw;
 
                     a {
                         display: block;
